[project]
name = "crt"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Robert McKee", email = "robertmckee@pm.me" }
]
dependencies = [
    "flet>=0.81.0",
    "pysos>=1.3.0",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "flet-web>=0.80.5",
]

[tool.flet]
org = "com.mycompany"
product = "crt"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
