[project]
name = "CRT"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Robert McKee", email = "robertmckee@pm.me" }
]
dependencies = [
    "flet>=0.81.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop>=0.81.0",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "com.robertcmckee"
product = "CRT"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Robert C McKee"

[tool.flet.app]
path = "src"
