[project]
name = "crt"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Robert McKee", email = "robertmckee@pm.me" }
]
dependencies = [
    "flet>=0.81.0",
    "numpy>=2.0.2",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop>=0.81.0",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "com.robertcmckee"
product = "crt"
company = "crt"
copyright = "Copyright (C) 2023-2026 by crt"

[tool.flet.app]
path = "src"
